# build_systems

./: README.md
autotools/jupiter_autoconf/: Makefile.in  autogen.sh  configure.ac
autotools/jupiter_autoconf/src/: Makefile.in  main.c
autotools/jupiter_automake/: AUTHORS  README  autogen.sh  configure.ac
autotools/jupiter_automake/src/: Makefile.am  main.c
autotools/jupiter_automake/src/potato/: Makefile.am  potato.c
autotools/jupiter_automake/src/potato/include/: potato.h
autotools/jupiter_makefile/src/: Makefile
autotools/m4/: test.m4
makefiles/factoriel/: main  makefile
makefiles/factoriel/include/: factoriel.h
makefiles/factoriel/src/: factoriel.c  main.c
makefiles/hello_world/: makefile
makefiles/jupiter_makefile/: Makefile
makefiles/jupiter_makefile/src/: jupiter
